<?xml version="1.0"?>
<package format="3">
  <name>ros_yolo_model</name>
  <version>0.0.1</version>
  <description>YOLO model implementation for ROS2</description>

  <maintainer email="attilaotvos8@g.com">M4yd4y</maintainer>
  <license>GNU 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
